--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@ cython_debug/
 bigcolor/results/*
 !final_results_multi_c_1024_ema_no_resize_real_gray
 !final_results_multi_c_512_ema_real_gray
+
+gray_upscayled
